add username as a field, authenticate through username

--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -7,6 +7,10 @@
     <%= f.input :email, :required => true %>
   </div>
 
+  <div class="inputs">
+    <%= f.input :username, :required => true %>
+  </div>
+
   <div class="actions">
     <%= f.button :submit, "Send me reset password instructions" %>
   </div>
