Changes related to Task > CloudSpokes Rails Site - Social Signup/Signin

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -6,8 +6,10 @@
   <div class="inputs">
     <%= f.input :email, :required => true, :autofocus => true %>
     <%= f.input :username, :required => true %>
-    <%= f.input :password, :required => true %>
-    <%= f.input :password_confirmation, :required => true %>
+    <%if resource.password_required?%>
+      <%= f.input :password, :required => true %>
+      <%= f.input :password_confirmation, :required => true %>
+    <%end%>
   </div>
 
   <div class="actions">
