--- a/app/views/refinery/_site_bar.html.erb
+++ b/app/views/refinery/_site_bar.html.erb
@@ -3,6 +3,22 @@
 <%= link_to t('.log_out', site_bar_translate_locale_args), main_app.destroy_user_session_path, :id => 'logout', :method => :delete %>  </li>
 <% else %>
   <li>
-  <%= link_to('Login', main_app.new_user_session_path)  %>  
+  	<%= link_to('Login', main_app.new_user_session_path)  %>  
   </li>
+<a href="/auth/twitter" class="auth_provider">
+  <%= image_tag "twitter_32.png", :size => "32x32", :alt => "Twitter" %>
+  Twitter
+</a>
+<a href="/auth/facebook" class="auth_provider">
+  <%= image_tag "facebook_32.png", :size => "32x32", :alt => "Facebook" %>
+  Facebook
+</a>  
+<a href="/auth/github" class="auth_provider">
+  <%= image_tag "github_32.png", :size => "32x32", :alt => "Github" %>
+  Github
+</a>
+<a href="/auth/google" class="auth_provider">
+  <%= image_tag "openid_32.png", :size => "32x32", :alt => "OpenID" %>
+  OpenID
+</a>
 <% end %>
