add salesforce login

--- a/app/views/refinery/_site_bar.html.erb
+++ b/app/views/refinery/_site_bar.html.erb
@@ -8,5 +8,6 @@
   <%= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter) %><br />
   <%= link_to "Sign in with Github", user_omniauth_authorize_path(:github) %><br />
   <%= link_to "Sign in with OpenID", user_omniauth_authorize_path(:google) %><br />
+  <%= link_to "Sign in with Salesforce", user_omniauth_authorize_path(:salesforce) %><br />
   </li>
 <% end %>
