--- a/app/assets/stylesheets/challenges.css.scss
+++ b/app/assets/stylesheets/challenges.css.scss
@@ -1,3 +1,93 @@
-// Place all the styles related to the challenges controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.submission-wrapper {
+  border: 1px solid #ccc;
+  box-shadow: 0 1px 1px #DDD;
+  padding: 20px;
+  border-radius: 5px;
+  margin: 20px 0;
+  h4 {
+    margin-bottom: 20px;
+  }
+  textarea {
+    width: 90%;
+    height: 5em;
+  }
+
+  .deliverables {
+    .deliverable {
+      padding: 5px;
+      line-height: 35px;
+      border-bottom: 1px dashed #ccc;
+      position: relative;
+      .layer {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding-left: 5%;
+        background-color: #000;
+        width: 95%;
+        height: 100%;
+        opacity: 0.7;
+        color: red;
+        line-height: 2.7em;
+        font-weight: bold;
+        font-size: 1.2em;
+      }
+      .info {
+        .type {
+          float: left;
+          width: 200px;
+          color: #777;
+          font-weight: bold;
+        }
+        .url {
+          float: left;
+          width: 600px;
+          color: #666;
+        }
+        .actions {
+          float: right;
+          display: none;
+        }
+        
+      }
+      &:hover {
+        background-color: #eee;
+        .actions {
+          display: block;
+        }
+      }
+      .form-wrapper form {
+        margin: 10px;
+        padding: 10px;
+        background-color: white;
+        border-radius: 5px;
+      }
+    }
+  }
+  .drag-drop-area {
+    color: #999;
+    border: 1px solid #ccc;
+    font-size: 2em;
+    font-weight: bold;
+    line-height: 2em;
+    padding: 10px 20px;
+    &.droppable {
+      background-color: gray;
+    }
+  }
+  .new-deliverable {
+    form {
+      margin-top: 20px;
+      display: none;
+    }
+  }
+
+  form.deliverable {
+    div.error {
+      color: red;
+    }
+    input.url {
+      width: 90%;
+    }
+  }
+}
