salesforce sandbox changes

--- a/app/views/refinery/_site_bar.html.erb
+++ b/app/views/refinery/_site_bar.html.erb
@@ -21,4 +21,8 @@
   <%= image_tag "openid_32.png", :size => "32x32", :alt => "OpenID" %>
   OpenID
 </a>
+<a href="/auth/salesforcesandbox" class="auth_provider">
+  <%= image_tag "openid_32.png", :size => "32x32", :alt => "Salesforce.com" %>
+  Salesforce (Sandbox)
+</a>
 <% end %>
