implement search for registered_members

--- a/app/views/challenges/show_search.html.erb
+++ b/app/views/challenges/show_search.html.erb
@@ -5,6 +5,11 @@
   <%= f.label :max_top_prize %>
   <%= f.number_field :max_top_prize %>
 
+  <%= f.label :min_registered_members %>
+  <%= f.number_field :min_registered_members %>
+
+  <%= f.label :max_registered_members %>
+  <%= f.number_field :max_registered_members %>
   <br />
   <%= f.submit %>
 <% end %>
