--- a/app/views/challenges/show_search.html.erb
+++ b/app/views/challenges/show_search.html.erb
@@ -1,9 +1,9 @@
 <%= form_for @search do |f| %>
-  <%= f.label :min_top_prize %>
-  <%= f.number_field :min_top_prize %>
+  <%= f.label :min_total_prize_money %>
+  <%= f.number_field :min_total_prize_money %>
 
-  <%= f.label :max_top_prize %>
-  <%= f.number_field :max_top_prize %>
+  <%= f.label :max_total_prize_money %>
+  <%= f.number_field :max_total_prize_money %>
 
   <%= f.label :min_registered_members %>
   <%= f.number_field :min_registered_members %>
@@ -12,4 +12,8 @@
   <%= f.number_field :max_registered_members %>
   <br />
   <%= f.submit %>
+<% end %>
+
+<% @challenges.each do |challenge| %>
+  <%= challenge.inspect %>
 <% end %>
