add community and category fields in the model, prepare for category seaching

--- a/app/views/challenges/show_search.html.erb
+++ b/app/views/challenges/show_search.html.erb
@@ -10,6 +10,10 @@
 
   <%= f.label :max_registered_members %>
   <%= f.number_field :max_registered_members %>
+
+  <%= f.label :categories %>
+  <%= f.select :categories, @category_names, {}, {multiple: true} %>
+
   <br />
   <%= f.submit %>
 <% end %>
