add category searching

--- a/app/views/challenges/show_search.html.erb
+++ b/app/views/challenges/show_search.html.erb
@@ -12,7 +12,7 @@
   <%= f.number_field :max_registered_members %>
 
   <%= f.label :categories %>
-  <%= f.select :categories, @category_names, {}, {multiple: true} %>
+  <%= f.select :categories, @category_names, {include_blank: true}, {multiple: true} %>
 
   <br />
   <%= f.submit %>
