--- a/app/views/challenges/search.html.erb
+++ b/app/views/challenges/search.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @search do |f| %>
+<%= form_for @search, method: :get do |f| %>
   <%= f.label :min_total_prize_money %>
   <%= f.number_field :min_total_prize_money %>
 
