design the results

--- a/app/views/challenges/search.html.erb
+++ b/app/views/challenges/search.html.erb
@@ -19,6 +19,7 @@
 <% end %>
 
 <% @challenges.each do |challenge| %>
-  <%= render challenge %>
-  <hr />
+  <div class="row-fluid">
+    <%= render challenge %>
+  </div>
 <% end %>
