--- a/app/views/search/challenges/_challenge.html.erb
+++ b/app/views/search/challenges/_challenge.html.erb
@@ -1,9 +1,16 @@
-<p><%= challenge.name %>
-<p><%= challenge.challenge_type %>
-<p><%= challenge.registered_members %>
-<p><%= challenge.description %>
-<p><%= Time.at(challenge.end_date.to_i) %>
-<% challenge.categories.entries.each do |category| %>
-  <%= render category %>
-<% end %>
-<p><%= challenge.community %>
+<div class="well clearfix">
+  <div class="span8">
+    <h4><%= link_to challenge.name, "/challenges/#{challenge.challenge_id}" %></h4>
+    <p><%= challenge.description %>
+    <% if challenge.community %>
+      <br /><span class="badge badge-inverse"><%= challenge.community %></span>
+    <% end %>
+    </p>
+  </div>
+  <div class="span4">
+    <strong><%= number_to_currency challenge.total_prize_money, precision: 0 %> <%= challenge.categories.entries.map(&:display_name).join(", ") %></strong><br />
+    due in <%= distance_of_time_in_words Time.now, Time.at(challenge.end_date.to_i) %> for<br />
+    <%= pluralize challenge.registered_members, 'member' %> registered<br />
+    <p><span class="label label-inverse"><%= challenge.challenge_type %></span>
+  </div>
+</div>
