--- a/app/views/search/challenges/_challenge.html.erb
+++ b/app/views/search/challenges/_challenge.html.erb
@@ -9,7 +9,11 @@
   </div>
   <div class="span4">
     <strong><%= number_to_currency challenge.total_prize_money, precision: 0 %> <%= challenge.categories.entries.map(&:display_name).join(", ") %></strong><br />
-    due in <%= distance_of_time_in_words Time.now, Time.at(challenge.end_date.to_i) %> for<br />
+    <% if challenge.is_open == "true" %>
+      due in <%= distance_of_time_in_words Time.now, Time.at(challenge.end_date.to_i) %>
+    <% else %>
+      closed
+    <% end %> for<br />
     <%= pluralize challenge.registered_members, 'member' %> registered<br />
     <p><span class="label label-inverse"><%= challenge.challenge_type.upcase %></span>
   </div>
