--- a/app/views/admin/challenges/new.html.erb
+++ b/app/views/admin/challenges/new.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for @challenge, html: { :class => 'form-horizontal' } do |f| %>
   <div class="row-fluid">
     <div class="span6">
-      <%= f.input :name %>
+      <%= f.input :name, required: true %>
       <%= f.input :status, collection: @challenge.statuses %>
       <div class="control-group">
         <label class="control-label">Start and End Dates</label>
@@ -29,6 +29,8 @@
           </div>
         </div>
       </div>
+    
+      <%= f.button :submit %>
     </div>
 
     <div class="span6">
