--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  *
  *= require_self
  *= require chosen
+ *= require select2
  *= require datepicker/base
  *= require datepicker/clean
  *= require_tree .
