--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,7 +1,8 @@
 <h2>Sign up</h2>
 
 <%= simple_form_for(resource, :as => resource_name, :url => user_registration_path(resource)) do |f| %>
-  <%= f.error_notification %>
+
+  <%= f.error_notification(message: f.object.errors.get(:account).try(:join, ", ")) %>
 
   <div class="inputs">
     <%= f.input :email, :required => true, :autofocus => true %>
