--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,9 +1,11 @@
 <h2>Change your password</h2>
 
+<%= content_tag :div, flash[:alert], class: "alert alert-error" if flash[:alert] %>
 <%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= f.error_notification %>
 
   <%= f.input :reset_password_token, :as => :hidden %>
+  <%= f.input :username, :as => :hidden %>
   <%= f.full_error :reset_password_token %>
 
   <div class="inputs">
