implement picklist for reviewers

--- a/app/views/admin/challenges/new.html.erb
+++ b/app/views/admin/challenges/new.html.erb
@@ -30,9 +30,7 @@
         </div>
       </div>
     
-      <%= f.input :reviewers do %>
-        <%= f.select :reviewers, [1,2,3,4], {}, {:multiple => true, :class => 'span12'} %>
-      <% end %>
+      <%= f.input :reviewers, :class => "bigdrop" %>
 
       <%= f.input :categories do %>
         <%= f.select :categories, Category.names, {}, {:multiple => true, :class => 'span12'} %>
