add frontend async file upload

--- a/app/assets/stylesheets/admin/challenges.css.scss
+++ b/app/assets/stylesheets/admin/challenges.css.scss
@@ -14,3 +14,7 @@ div.datepicker td.datepickerFuture a {
 #s2id_admin_challenge_categories {
   margin-left: 0;
 }
+
+.plupload_container {
+  padding: 0px;
+}
