--- a/app/views/admin/challenges/new.html.erb
+++ b/app/views/admin/challenges/new.html.erb
@@ -38,6 +38,27 @@
 
       <%= f.input :commentNotifiers %>
 
+      <div id="uploader">
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+        <script>
+          $(function(){
+            $("#uploader").pluploadQueue({
+              runtimes: 'html5,flash',
+              url: '<%= admin_challenges_assets_path %>',
+              multipart_params: {
+                "<%= request_forgery_protection_token %>": "<%= form_authenticity_token %>",
+                "<%= request.session_options[:key] %>": "<%= request.session_options[:id] %>"
+              },
+              init: {
+                FileUploaded: function(up, file, info) {
+                  eval(info["response"]);
+                }
+              }
+            });
+          });
+        </script>
+      </div>
+
       <%= f.button :submit %>
     </div>
 
