perform s3 upload at the backend

--- a/app/views/admin/challenges/assets.js.erb
+++ b/app/views/admin/challenges/assets.js.erb
@@ -1,1 +1,5 @@
-alert();
+$('#admin_challenge_assets').val(function(i, v) {
+  var arr = v.split(',')
+  arr.push('<%= @asset[:url] %>')
+  return arr.join(',')
+})
