--- a/app/views/admin/challenges/_prizes.html.erb
+++ b/app/views/admin/challenges/_prizes.html.erb
@@ -1,24 +1,31 @@
-<div class="control-group">
-  <label class="control-label">Place</label>
-  <div class="controls">
-    <input type="number" name="admin_challenge[prizes][][place]"></input>
+<div id="prizes">
+  <legend>Prizes</legend>
+  <div class="control-group">
+    <label class="control-label">Place</label>
+    <div class="controls">
+      <input type="number" name="admin_challenge[prizes][][place]"></input>
+    </div>
+  </div>
+  <div class="control-group">
+    <label class="control-label">Prize</label>
+    <div class="controls">
+      <input type="number" name="admin_challenge[prizes][][prize]"></input>
+    </div>
+  </div>
+  <div class="control-group">
+    <label class="control-label">Points</label>
+    <div class="controls">
+      <input type="number" name="admin_challenge[prizes][][points]"></input>
+    </div>
+  </div>
+  <div class="control-group">
+    <label class="control-label">Value</label>
+    <div class="controls">
+      <input type="number" name="admin_challenge[prizes][][value]"></input>
+    </div>
   </div>
 </div>
-<div class="control-group">
-  <label class="control-label">Prize</label>
-  <div class="controls">
-    <input type="number" name="admin_challenge[prizes][][prize]"></input>
-  </div>
-</div>
-<div class="control-group">
-  <label class="control-label">Points</label>
-  <div class="controls">
-    <input type="number" name="admin_challenge[prizes][][points]"></input>
-  </div>
-</div>
-<div class="control-group">
-  <label class="control-label">Value</label>
-  <div class="controls">
-    <input type="number" name="admin_challenge[prizes][][value]"></input>
-  </div>
+<div class="controls">
+  <hr />
+  <a class='btn btn-info add-new-prize-set'>Add New Prize Set</a>
 </div>
