implement challenge id, various partial refactoring

--- a/app/views/admin/challenges/_challenge_info.html.erb
+++ b/app/views/admin/challenges/_challenge_info.html.erb
@@ -21,6 +21,41 @@
   </div>
 </div>
 
+<script>
+// we need erb here as well. for later refactoring, we should move these to
+// a data-attribute somewhere (or maybe use gon)
+$(function() {
+  var to = new Date(<%= @challenge.end_date.to_time.utc.to_i * 1000 %>);
+  var from = new Date(<%= @challenge.start_date.to_time.utc.to_i * 1000 %>);
+
+  var $elem = $('#start-end-date')
+  $elem.DatePicker({
+    inline: true,
+    date: [from, to],
+    calendars: 3,
+    mode: 'range',
+    onChange: function(dates,el) {
+      // update the range display
+      $('#start-end-date span#display').text(
+        dates[0].getDate()+' '+dates[0].getMonthName(true)+', '+
+        dates[0].getFullYear()+' - '+
+        dates[1].getDate()+' '+dates[1].getMonthName(true)+', '+
+        dates[1].getFullYear());
+      $('#date-range-hidden-start').val($elem.DatePickerGetDate()[0][0])
+      $('#date-range-hidden-end').val($elem.DatePickerGetDate()[0][1])
+    }
+  });
+  $('#date-range-hidden-start').val($elem.DatePickerGetDate()[0][0])
+  $('#date-range-hidden-end').val($elem.DatePickerGetDate()[0][1])
+
+
+  // initialize the special date dropdown field
+  $('#start-end-date span#display').text(from.getDate()+' '+from.getMonthName(true)+', '+from.getFullYear()+' - '+
+                                      to.getDate()+' '+to.getMonthName(true)+', '+to.getFullYear());
+
+})
+</script>
+
 <div class="control-group">
   <label class="control-label">Winner Announced</label>
   <div class="controls">
