prepopulate reviewer and comment notifiers

--- a/app/views/admin/challenges/_challenge_info.html.erb
+++ b/app/views/admin/challenges/_challenge_info.html.erb
@@ -70,6 +70,50 @@ $(function() {
 </div>
 
 <%= f.input :reviewers %>
+<script>
+$(function() {
+  var member_search_settings = {
+    initSelection: function(element, callback) {
+      var data = [];
+      $(element.val().split(",")).each(function () {
+          data.push({name: this});
+      });
+      callback(data);
+    },
+    placeholder: "Search for a member",
+    minimumInputLength: 1,
+    multiple: true,
+    id: "name",
+    ajax: { // instead of writing the function to execute the request we use Select2's convenient helper
+        url: "/members/search",
+        dataType: 'jsonp',
+        data: function (term, page) {
+          return {
+            keyword: term, // search term
+          };
+        },
+        results: function (data, page) { // parse the results into the format expected by Select2.
+          // since we are using custom formatting functions we do not need to alter remote JSON data
+          return {results: data};
+        }
+    },
+    formatResult: function(member) {
+      return member.name
+    },
+    formatSelection: function(member) {
+      return member.name
+    },
+    containerCssClass: "span6" // apply css that makes the dropdown taller
+  }
+
+  console.log('<%= @challenge.reviewers.join(',') %>')
+  $('#admin_challenge_reviewers').val("<%= @challenge.reviewers.join(',') %>").select2(member_search_settings)
+  $('#admin_challenge_categories').select2({
+    containerCssClass: "span6"
+  })
+  $('#admin_challenge_commentNotifiers').val("<%= @challenge.commentNotifiers.join(',') %>").select2(member_search_settings)
+})
+</script>
 
 <%= f.input :categories do %>
   <%= f.select :categories, Category.names, {}, {:multiple => true, :class => 'span6'} %>
