derive winner announced date from the data as well

--- a/app/views/admin/challenges/_challenge_info.html.erb
+++ b/app/views/admin/challenges/_challenge_info.html.erb
@@ -69,6 +69,31 @@ $(function() {
   </div>
 </div>
 
+<script>
+$(function() {
+  var to = new Date(<%= @challenge.winner_announced.to_time.utc.to_i * 1000 %>);
+  var $elem = $('#winner-announced-date')
+  $elem.DatePicker({
+    mode: 'single',
+    calendars: 3,
+    inline: true,
+    date: to,
+    onChange: function(date,el) {
+      // update the range display
+      $('#winner-announced-date span#display').text(
+        date.getDate()+' '+date.getMonthName(true)+', '+
+        date.getFullYear())
+      $('#winner-announced-hidden').val($elem.DatePickerGetDate()[0])
+    }
+  })
+  $('#winner-announced-hidden').val($elem.DatePickerGetDate()[0])
+
+  // initialize the special date dropdown field
+  $('#winner-announced-date span#display').text(to.getDate()+' '+to.getMonthName(true)+', '+to.getFullYear());
+
+})
+</script>
+
 <%= f.input :reviewers %>
 <script>
 $(function() {
