delete a prize set

--- a/app/views/admin/challenges/_prizes.html.erb
+++ b/app/views/admin/challenges/_prizes.html.erb
@@ -28,6 +28,7 @@
             <input type="number" name="admin_challenge[prizes][][value]" value='<%= prize.value %>'></input>
           </div>
         </div>
+        <a class='btn btn-danger delete-prize-set'>Delete This Prize Set</a>
       </div>
     <% end %>
   </div>
